created basic structure for production

--- a/micro-economics/main.html
+++ b/micro-economics/main.html
@@ -8,12 +8,12 @@
     <title>Resourcia</title>
 
     <!-- bootstrap files -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="css/sidebars.css">
-    <link rel="stylesheet" href="css/mystyles.css">
+    <link rel="stylesheet" href="../css/sidebars.css">
+    <link rel="stylesheet" href="../css/mystyles.css">
 
     <!-- icon of page -->
     <link rel="icon" href="favicon.ico">
@@ -37,7 +37,7 @@
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
           <li class="nav-item">
-            <a href="index.html" class="nav-link text-white active" aria-current="page">
+            <a href="../index.html" class="nav-link text-white active" aria-current="page">
               <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#home"/></svg>
               Home
             </a>
@@ -51,9 +51,12 @@
       <div class="b-example-divider b-example-vr"></div>
     
       <div class="container">
-        <a href="cost-and-management-accounting/main.html" class="buttonClass col-lg-6 col">Principles of Marketing</a>
-        <a href="micro-economics/main.html" class="buttonClass col-lg-6 col">Micro Economics</a>
-        <a href="principles-of-marketing/main.html" class="buttonClass col-lg-6 col">COST AND MANAGEMENT ACCOUNTING</a>
+        <a href="https://drive.google.com/file/d/1U7CK6EhPxYGcWSNqf4VDyFh_EBO6jl8o/view" class="buttonClass col-lg-6 col" target="_blank">Syllabus</a>
+        <a href="https://mru.org/principles-economics-microeconomics" class="buttonClass col-lg-6 col" target="_blank">Short Course</a>
+        <a href="https://ocw.mit.edu/courses/14-01-principles-of-microeconomics-fall-2018/pages/calendar" class="buttonClass col-lg-6 col" target="_blank">Long Course</a>
+        <a href="short-notes.html" class="buttonClass col-lg-6 col">Short Notes</a>
+        <a href="coming-soon.html" class="buttonClass col-lg-6 col" target="_blank">Books</a>
+        <a href="coming-soon.html" class="buttonClass col-lg-6 col" target="_blank">PYQs</a>
       </div>
     </main>
   </div>
