--- a/micro-economics/short-notes.html
+++ b/micro-economics/short-notes.html
@@ -8,12 +8,12 @@
     <title>Resourcia</title>
 
     <!-- bootstrap files -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="css/sidebars.css">
-    <link rel="stylesheet" href="css/mystyles.css">
+    <link rel="stylesheet" href="../css/sidebars.css">
+    <link rel="stylesheet" href="../css/mystyles.css">
 
     <!-- icon of page -->
     <link rel="icon" href="favicon.ico">
@@ -37,7 +37,7 @@
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
           <li class="nav-item">
-            <a href="index.html" class="nav-link text-white active" aria-current="page">
+            <a href="../index.html" class="nav-link text-white active" aria-current="page">
               <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#home"/></svg>
               Home
             </a>
@@ -51,9 +51,15 @@
       <div class="b-example-divider b-example-vr"></div>
     
       <div class="container">
-        <a href="cost-and-management-accounting/main.html" class="buttonClass col-lg-6 col">Principles of Marketing</a>
-        <a href="micro-economics/main.html" class="buttonClass col-lg-6 col">Micro Economics</a>
-        <a href="principles-of-marketing/main.html" class="buttonClass col-lg-6 col">COST AND MANAGEMENT ACCOUNTING</a>
+        <a href="coming-soon.html" class="buttonClass" target="_blank">chapter 1</a>
+        <a href="coming-soon.html" class="buttonClass" target="_blank">chapter 2</a>
+        <a href="coming-soon.html" class="buttonClass" target="_blank">chapter 3</a>
+        <a href="coming-soon.html" class="buttonClass" target="_blank">chapter 4</a>
+        <a href="coming-soon.html" class="buttonClass" target="_blank">chapter 5</a>
+        <a href="coming-soon.html" class="buttonClass" target="_blank">chapter 6</a>
+        <a href="coming-soon.html" class="buttonClass" target="_blank">chapter 7</a>
+        <a href="coming-soon.html" class="buttonClass" target="_blank">chapter 8</a>
+        <a href="coming-soon.html" class="buttonClass" target="_blank">chapter 9</a>
       </div>
     </main>
   </div>
