working on colors-1

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </head>
 
-<body class="h-100  text-bg-dark">
+<body class="h-100 text-bg-dark">
   
   <!-- landing-page -->
   <div class="cover-container text-center d-flex w-100 p-3 mx-auto flex-column" id="landing-page">
@@ -49,8 +49,8 @@
     <main class="px-3 landing-content">
       <h1>Your Only College Companion</h1>
       <p class="lead">
-        "Our vision is to provide every student, regardless of their branch or college, 
-        with easy access to any and all resources they need through our platform.”
+        "Our vision is to provide every student,  
+        with easy access to all resources they need through our platform.”
       </p>
       <p class="lead">
         <a href="#footer" class="btn btn-lg btn-light fw-bold border-white bg-white">Contact Us</a>
@@ -64,9 +64,10 @@
 
   </div>
 
+  <hr class="separator-1">
   <!-- BMS course -->
-  <div>
-    <h1 class="course ms-3 mt-3" id="BMS">BMS</h1>
+  <div  id="BMS">
+    <h1 class="course ms-3 mt-3">BMS</h1>
 
     <!-- MicroEconomics -->
     <div class="subject w-75 mx-auto">
@@ -356,19 +357,19 @@
   </div>
 
   <!-- footer  -->
+  <hr class="separator-1">
   <div class="container"  id="footer">
-  <hr>
   <footer class="py-5">
     <div class="row">
       <div class="col-lg-6 col-md-2 mb-3">
         <h5>Courses</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#BMS" class="nav-link p-0 text-body-secondary">BMS</a></li>
+          <li class="nav-item mb-2"><a href="#BMS" class="nav-link p-0">BMS</a></li>
           <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-body-secondary">B.Com(coming soon)</a></li>
         </ul>
       </div>
 
-      <div class="col-lg-6 col-md-5 mb-3" id="contact-mail">
+      <div class="col-lg-6 col mb-3" id="contact-mail">
           <h5>Contact Us:</h5>
           <a class="footer-mail-link" href="mailto:surajshukla@resourcia.tech">
             surajshukla@resourcia.tech <i class="fa-solid fa-paper-plane" style="color: #e77f19;"></i>          
