working on color -2

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- navbar -->
     <header class="fixed-navbar">
       <div>
-        <h3 class="float-md-start mb-0"><a href="#landing-page">Resourcia <i class="fa-solid fa-handshake"></i></a></h3>
+        <h3 class="float-md-start mb-0"><a href="#landing-page" class="brand">Resourcia <i class="fa-solid fa-handshake"></i></a></h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#landing-page">Home</a>
           <div class="dropdown">
@@ -59,14 +59,14 @@
 
     <!-- landing-page-bottom -->
     <div>
-      <p><a href="#BMS">BMS(DU) semester 2 notes are available</a></p>
+      <p><a href="#BMS" class="update">BMS(DU) semester 2 notes are available</a></p>
     </div>
 
   </div>
 
   <hr class="separator-1">
   <!-- BMS course -->
-  <div  id="BMS">
+  <div class="courses" id="BMS">
     <h1 class="course ms-3 mt-3">BMS</h1>
 
     <!-- MicroEconomics -->
@@ -79,7 +79,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>  
@@ -90,28 +90,28 @@
         <div class="container text-center mb-5">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>
@@ -122,7 +122,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>  
@@ -133,7 +133,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>  
@@ -144,7 +144,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>  
@@ -155,7 +155,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>  
@@ -174,7 +174,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>  
@@ -185,28 +185,28 @@
         <div class="container text-center mb-5">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>
@@ -217,7 +217,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>  
@@ -228,7 +228,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>  
@@ -239,7 +239,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>  
@@ -250,7 +250,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>  
@@ -269,7 +269,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>  
@@ -280,28 +280,28 @@
         <div class="container text-center mb-5">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>
@@ -312,7 +312,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>  
@@ -323,7 +323,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>  
@@ -334,7 +334,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>  
@@ -345,7 +345,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a href="">Column</a>
+              <a class="content-link" href="">Column</a>
             </div>
           </div>
         </div>  
@@ -380,10 +380,10 @@
     <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
       <p>© 2023 Company, Inc. All rights reserved.</p>
       <ul class="list-unstyled d-flex">
-        <li class="ms-3"><a class="link-body-emphasis" href="#"><i class="fa-brands fa-youtube" style="color: #6c8f9e"></i></a></li>
-        <li class="ms-3"><a class="link-body-emphasis" href="#"><i class="fa-brands fa-instagram" style="color: #6c8f9e"></i></a></li>
-        <li class="ms-3"><a class="link-body-emphasis" href="#"><i class="fa-brands fa-twitter" style="color: #6c8f9e"></i></a></li>
-        <li class="ms-3"><a class="link-body-emphasis" href="#"><i class="fa-brands fa-linkedin" style="color: #6c8f9e"></i></a></li>
+        <li class="ms-3"><a class="link-body-emphasis" href="#"><i class="fa-brands fa-youtube social-links"></i></a></li>
+        <li class="ms-3"><a class="link-body-emphasis" href="#"><i class="fa-brands fa-instagram social-links"></i></a></li>
+        <li class="ms-3"><a class="link-body-emphasis" href="#"><i class="fa-brands fa-twitter social-links"></i></a></li>
+        <li class="ms-3"><a class="link-body-emphasis" href="#"><i class="fa-brands fa-linkedin social-links"></i></a></li>
       </ul>
     </div>
   </footer>
