--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <!-- navbar -->
     <header class="fixed-navbar">
       <div>
-        <h3 class="float-md-start mb-0"><a href="#landing-page" class="brand">Resourcia <i class="fa-solid fa-handshake"></i></a></h3>
-        <nav class="nav nav-masthead justify-content-center float-md-end">
+        <h3 class="float-lg-start mb-0"><a href="#landing-page" class="brand">Resourcia <i class="fa-solid fa-handshake"></i></a></h3>
+        <nav class="nav nav-masthead justify-content-center float-lg-end">
           <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#landing-page">Home</a>
           <div class="dropdown">
             <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -79,7 +79,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="https://drive.google.com/file/d/1U7CK6EhPxYGcWSNqf4VDyFh_EBO6jl8o/view" target="_blank">Open <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -90,28 +90,28 @@
         <div class="container text-center mb-5">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
           </div>
         </div>
@@ -122,7 +122,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="https://mru.org/principles-economics-microeconomics" target="_blank">Open <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -133,7 +133,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="https://ocw.mit.edu/courses/14-01-principles-of-microeconomics-fall-2018/pages/calendar/" target="_blank">Open <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -144,7 +144,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="https://drive.google.com/file/d/1me1lJWhKor-Cb9HJUHkN848vtq9daBK9/view" target="_blank">Open <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -155,7 +155,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
           </div>
         </div>  
@@ -174,7 +174,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
           </div>
         </div>  
@@ -185,28 +185,28 @@
         <div class="container text-center mb-5">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
           </div>
         </div>
@@ -217,7 +217,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
           </div>
         </div>  
@@ -228,7 +228,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="https://www.coursera.org/learn/marketing-management/home/info" target="_blank">Open <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -239,7 +239,13 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="https://drive.google.com/file/d/1T6zUEkKLc87O7ccx0NmgjEjyhxLkeGzv/view" target="_blank">by Philio Kotler (2e) <i class="fa-solid fa-link"></i></a>
+            </div>
+            <div class="col-lg-6 mb-5">
+              <a class="content-link" href="https://drive.google.com/file/d/1-bW6XmWtcogT_MjUHq7imPXOZJto43yY/view" target="_blank">by Philio Kotler (14e) <i class="fa-solid fa-link"></i></a>
+            </div>
+            <div class="col-lg-6 mb-5">
+              <a class="content-link" href="https://drive.google.com/file/d/1B9NVe-Ie87z9uNuVELw1QHMoKiJblR0_/view" target="_blank">by Openstax <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -250,7 +256,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
           </div>
         </div>  
@@ -269,7 +275,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="https://drive.google.com/file/d/1cf2lc93YtIwO06riMl4GPyYlvUV8CiXP/view" target="_blank">Open <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -280,28 +286,28 @@
         <div class="container text-center mb-5">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
           </div>
         </div>
@@ -312,7 +318,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
           </div>
         </div>  
@@ -323,7 +329,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="https://www.youtube.com/watch?v=VXTbSqrS1OQ&list=PLiaygP8qeQGUCZnFPYuxdwlDeS2NY6Goa" target="_blank">Open <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -334,7 +340,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="https://drive.google.com/file/d/19dE5HMGRCH9QTVNsOEAuRsJIT-jzu3JJ/view" target="_blank">Open <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
@@ -345,7 +351,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="">Column</a>
+              <a class="content-link" href="">Coming Soon</a>
             </div>
           </div>
         </div>  
@@ -369,7 +375,7 @@
         </ul>
       </div>
 
-      <div class="col-lg-6 col mb-3" id="contact-mail">
+      <div class="col-lg-6 col-md-12 mb-3" id="contact-mail">
           <h5>Contact Us:</h5>
           <a class="footer-mail-link" href="mailto:surajshukla@resourcia.tech">
             surajshukla@resourcia.tech <i class="fa-solid fa-paper-plane" style="color: #e77f19;"></i>          
@@ -394,4 +400,4 @@
   integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
   </body>
-</html>
+</Coming Soon
