--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </main>
 
     <!-- landing-page-bottom -->
-    <div>
+    <div class="mb-5">
       <p><a href="#BMS" class="update">BMS(DU) semester 2 notes are available</a></p>
     </div>
 
