--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <a class="content-link" href="https://ocw.mit.edu/courses/14-01-principles-of-microeconomics-fall-2018/pages/calendar/" target="_blank">Open <i class="fa-solid fa-link"></i></a>
+              <a class="content-link" href="https://www.youtube.com/playlist?list=PLTjEimbqDkpBL55W6wye1jTcYePjehkT3" target="_blank">Open <i class="fa-solid fa-link"></i></a>
             </div>
           </div>
         </div>  
